erDiagram
    user ||--o{ user_profile : "1:1"
    user ||--o{ user_question_stats : "1:1"
    user ||--o{ user_points : "1:1"
    user ||--o{ user_member : "1:N"
    user ||--o{ user_achievement : "N:M"
    user ||--o{ user_follow : "N:M"
    user ||--o{ user_sign_in : "1:N"
    user ||--o{ user_question_record : "1:N"
    user ||--o{ wrong_question_book : "1:N"
    user ||--o{ points_record : "1:N"
    user ||--o{ user_category_permission : "N:M"
    user ||--o{ category_rating : "N:M"

    admin_role ||--o{ admin_user : "1:N"
    admin_user ||--o{ admin_login_log : "1:N"

    project_category ||--o{ question_category : "1:N"
    project_category ||--o{ question_tag_category : "1:N"
    project_category ||--o{ user_project_category : "1:N"
    project_category ||--o{ question : "1:N"

    question_category ||--o{ question : "1:N"
    question_category ||--o{ category_comment : "1:N"
    question_category ||--o{ question_permission : "1:1"
    question_category ||--o{ user_category_permission : "1:N"
    question_category ||--o{ category_rating : "1:N"

    question ||--o{ question_comment : "1:N"
    question ||--o{ user_question_record : "1:N"
    question ||--o{ wrong_question_book : "1:N"

    member_level ||--o{ user_member : "1:N"
    member_level ||--o{ question_permission : "0..1"

    achievement ||--o{ user_achievement : "1:N"

    user_project_category }o--|| project_category : "N:1"
    user_project_category }o--|| user : "N:1"

    %% 完整表结构定义
    user {
        bigint id PK "用户ID"
        varchar username "用户名"
        varchar password "密码(加密)"
        varchar email "邮箱"
        varchar phone "手机号"
        tinyint status "状态"
        datetime create_time
        datetime update_time
    }

    admin_role {
        bigint id PK "角色ID"
        varchar name "角色名称"
        varchar description "角色描述"
        text permissions "权限集合"
        tinyint status "状态"
        datetime create_time
        datetime update_time
    }

    member_level {
        bigint id PK "等级ID"
        varchar name "等级名称"
        varchar description "等级描述"
        decimal price "会员价格"
        int duration "有效期(天)"
        varchar icon "等级图标"
        varchar benefits "权益说明"
        tinyint status "状态"
        datetime create_time
        datetime update_time
    }

    achievement {
        bigint id PK "成就ID"
        varchar name "成就名称"
        varchar description "成就描述"
        varchar icon "图标URL"
        tinyint condition_type "条件类型"
        int condition_value "条件数值"
        tinyint status "状态"
        datetime create_time
        datetime update_time
    }

    project_category {
        bigint id PK "项目分类ID"
        varchar name "分类名称"
        varchar description "项目描述"
        int sort_order "排序序号"
        tinyint status "状态"
        datetime create_time
        datetime update_time
    }

    admin_user {
        bigint id PK "管理员ID"
        varchar username "用户名"
        varchar password "密码"
        varchar real_name "真实姓名"
        varchar email "邮箱"
        varchar phone "手机号"
        bigint role_id FK "角色ID"
        varchar last_login_ip "最后登录IP"
        datetime last_login_time
        int login_count "登录次数"
        tinyint status "状态"
        datetime create_time
        datetime update_time
    }

    user_profile {
        bigint id PK "资料ID"
        bigint user_id FK "用户ID"
        varchar nickname "昵称"
        varchar avatar "头像URL"
        tinyint gender "性别"
        int age "年龄"
        varchar bio "个人简介"
        bigint display_achievement_id FK "展示成就ID"
        datetime create_time
        datetime update_time
    }

    question_category {
        bigint id PK "分类ID"
        bigint project_id FK "项目ID"
        varchar name "分类名称"
        varchar description "分类描述"
        bigint creator_id FK "创建者ID"
        varchar avatar_url "头像URL"
        int sort_order "排序序号"
        bigint view_count "访问量"
        tinyint status "状态"
        datetime create_time
        datetime update_time
    }

    question {
        bigint id PK "题目ID"
        bigint project_id FK "项目ID"
        bigint category_id FK "分类ID"
        varchar title "题目标题"
        text content "题目内容"
        text answer "题目答案"
        tinyint difficulty "难度"
        tinyint type "题目类型"
        json tag_category_id "标签分类"
        tinyint status "状态"
        bigint view_count "浏览次数"
        datetime create_time
        datetime update_time
    }

    question_comment {
        bigint id PK "评论ID"
        bigint question_id FK "题目ID"
        bigint user_id FK "用户ID"
        text content "评论内容"
        bigint parent_id FK "父评论ID"
        int like_count "点赞数"
        tinyint status "状态"
        datetime create_time
        datetime update_time
    }

    category_comment {
        bigint id PK "评论ID"
        bigint category_id FK "分类ID"
        bigint user_id FK "用户ID"
        text content "评论内容"
        bigint parent_id FK "父评论ID"
        int like_count "点赞数"
        tinyint status "状态"
        datetime create_time
        datetime update_time
    }

    user_question_stats {
        bigint id PK "统计ID"
        bigint user_id FK "用户ID"
        int total_solved "总刷题数"
        int easy_solved "简单题数"
        int medium_solved "中等题数"
        int hard_solved "困难题数"
        datetime create_time
        datetime update_time
    }

    user_achievement {
        bigint id PK "用户成就ID"
        bigint user_id FK "用户ID"
        bigint achievement_id FK "成就ID"
        datetime achieve_time "获得时间"
        datetime create_time
        datetime update_time
    }

    user_member {
        bigint id PK "用户会员ID"
        bigint user_id FK "用户ID"
        bigint level_id FK "等级ID"
        datetime start_time "开始时间"
        datetime end_time "结束时间"
        tinyint status "状态"
        datetime create_time
        datetime update_time
    }

    user_points {
        bigint id PK "积分记录ID"
        bigint user_id FK "用户ID"
        int points "当前积分"
        int total_points "累计积分"
        int used_points "已用积分"
        datetime create_time
        datetime update_time
    }

    points_record {
        bigint id PK "记录ID"
        bigint user_id FK "用户ID"
        int points "变动积分"
        tinyint type "类型"
        tinyint source "来源"
        varchar description "说明"
        datetime create_time
    }

    question_permission {
        bigint id PK "权限ID"
        bigint category_id FK "分类ID"
        int points_required "所需积分"
        tinyint is_member_free "会员免费"
        bigint min_member_level FK "最低等级"
        tinyint status "状态"
        datetime create_time
        datetime update_time
    }

    user_category_permission {
        bigint id PK "用户权限ID"
        bigint user_id FK "用户ID"
        bigint category_id FK "分类ID"
        datetime create_time
        datetime update_time
    }

    user_sign_in {
        bigint id PK "签到ID"
        bigint user_id FK "用户ID"
        date sign_date "签到日期"
        datetime sign_time "签到时间"
        varchar sign_ip "签到IP"
        int continuous_days "连续天数"
        int points_earned "获得积分"
        datetime create_time
        datetime update_time
    }

    user_question_record {
        bigint id PK "记录ID"
        bigint user_id FK "用户ID"
        bigint question_id FK "题目ID"
        text user_answer "用户答案"
        tinyint is_correct "是否正确"
        int answer_time "答题用时"
        datetime create_time
        datetime update_time
    }

    category_rating {
        bigint id PK "评分ID"
        bigint user_id FK "用户ID"
        bigint category_id FK "分类ID"
        tinyint rating "评分"
        datetime create_time
        datetime update_time
    }

    admin_login_log {
        bigint id PK "日志ID"
        bigint admin_id FK "管理员ID"
        varchar login_ip "登录IP"
        datetime login_time "登录时间"
        tinyint login_status "登录状态"
        varchar user_agent "浏览器信息"
        datetime create_time
    }

    wrong_question_book {
        bigint id PK "记录ID"
        bigint user_id FK "用户ID"
        bigint question_id FK "题目ID"
        int wrong_count "错误次数"
        datetime last_wrong_time "最后错误时间"
        text last_wrong_answer "错误答案"
        varchar remark "备注"
        datetime create_time
        datetime update_time
    }

    user_follow {
        bigint id PK "关注ID"
        bigint user_id FK "关注者ID"
        bigint followed_user_id FK "被关注者ID"
        datetime create_time
        datetime update_time
    }

    question_tag_category {
        bigint id PK "标签分类ID"
        bigint project_id FK "项目ID"
        varchar name "标签名称"
        varchar description "标签描述"
        int sort_order "排序序号"
        tinyint status "状态"
        datetime create_time
        datetime update_time
    }

    user_project_category {
        bigint id PK "主键ID"
        bigint user_id FK "用户ID"
        bigint project_id FK "项目ID"
        datetime uptime "更新时间"
        datetime create_time
    }